added moare css

--- a/calculator.html
+++ b/calculator.html
@@ -3,33 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <title>Calcutron 2000</title>
     <link rel="stylesheet" href="calc.css">
 </head>
 <body>
-    
-    <div class = "container">
+    <div class= "container">
         <h1>Calcu-Tron 2000</h1>
         <div id = "display">display screen goes here</div>
             <div id = "calcbox">
-                <button id= button>1</button>
-                <button id= button>2</button>
-                <button id= button>3</button>
-                <button id= button>Add</button>
-                <button id= button>4</button>
-                <button id= button>5</button>
-                <button id= button>6</button>
-                <button id= button>Subtract</button>
-                <button id= button>7</button>
-                <button id= button>8</button>
-                <button id= button>9</button>
-                <button id= button>Multiply</button>
-                <button id= button>0</button>
-                <button id= button>.</button>
-                <button id= button>Enter</button>
-                <button id= button>Divide</button>
-                <button id= button>Clear</button>
+                <button class= "btn">1</button>
+                <button class= "btn">2</button>
+                <button class= "btn">3</button>
+                <button class= "btn">Add</button>
+                <button class= "btn">4</button>
+                <button class= "btn">5</button>
+                <button class= "btn">6</button>
+                <button class= "btn">Subtract</button>
+                <button class= "btn">7</button>
+                <button class= "btn">8</button>
+                <button class= "btn">9</button>
+                <button class= "btn">Multiply</button>
+                <button class= "btn">0</button>
+                <button class= "btn">.</button>
+                <button class= "btn">Clear</button>
+                <button class= "btn">Divide</button>
+                <button class= "btn" id= "enter">Enter</button>
             </div>
         </div>
 </body>
