--- a/calculator.html
+++ b/calculator.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcutron 2000</title>
     <link rel="stylesheet" href="calc.css">
+    <script src="calc.js" defer></script>
 </head>
 <body>
     <div class= "container">
         <h1>Calcu-Tron 2000</h1>
-        <div id = "display">display screen goes here</div>
+        <div id = "display">Display Screen</div>
             <div id = "calcbox">
                 <button class= "btn">1</button>
                 <button class= "btn">2</button>
