aded input function to display user selection operand

--- a/calculator.html
+++ b/calculator.html
@@ -9,27 +9,27 @@
     <script src="calc.js" defer></script>
 </head>
 <body>
-    <div class= "container">
+    <div class="container">
         <h1>Calcu-Tron 2000</h1>
-        <div id = "display">Display Screen</div>
-            <div id = "calcbox">
-                <button class= "btn">1</button>
-                <button class= "btn">2</button>
-                <button class= "btn">3</button>
-                <button class= "btn">Add</button>
-                <button class= "btn">4</button>
-                <button class= "btn">5</button>
-                <button class= "btn">6</button>
-                <button class= "btn">Subtract</button>
-                <button class= "btn">7</button>
-                <button class= "btn">8</button>
-                <button class= "btn">9</button>
-                <button class= "btn">Multiply</button>
-                <button class= "btn">0</button>
-                <button class= "btn">.</button>
-                <button class= "btn">Clear</button>
-                <button class= "btn">Divide</button>
-                <button class= "btn" id= "enter">Enter</button>
+        <div id="display"></div>
+            <div id="calcbox">
+                <button type="button" name="operand" value= "1">1</button>
+                <button type="button" name="operand" value= "2">2</button>
+                <button type="button" name="operand" value= "3">3</button>
+                <button type="button" name="operator" value= "+">+</button>
+                <button type="button" name="operand" value= "4">4</button>
+                <button type="button" name="operand" value= "5">5</button>
+                <button type="button" name="operand" value= "6">6</button>
+                <button type="button" name="operator" value= "-">-</button>
+                <button type="button" name="operand" value= "7">7</button>
+                <button type="button" name="operand" value= "8">8</button>
+                <button type="button" name="operand" value= "9">9</button>
+                <button type="button" name="operator" value= "*">x</button>
+                <button type="button" name="operand" value= "0">0</button>
+                <button type="button" name="decimal" value= ".">.</button>
+                <button type="button" name="clear" value= "clear">AC</button>
+                <button type="button" name="operator" value= "/">/</button>
+                <button type="button" name="equals" value= "=" id="equals">=</button>
             </div>
         </div>
 </body>
