--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta class="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcutron 2000</title>
     <link rel="stylesheet" href="calc.css">
     <script src="calc.js" defer></script>
@@ -13,23 +13,23 @@
         <h1>Calcu-Tron 2000</h1>
         <div id="display"></div>
             <div id="calcbox">
-                <button type="button" name="operand" value= "1">1</button>
-                <button type="button" name="operand" value= "2">2</button>
-                <button type="button" name="operand" value= "3">3</button>
-                <button type="button" name="operator" value= "+">+</button>
-                <button type="button" name="operand" value= "4">4</button>
-                <button type="button" name="operand" value= "5">5</button>
-                <button type="button" name="operand" value= "6">6</button>
-                <button type="button" name="operator" value= "-">-</button>
-                <button type="button" name="operand" value= "7">7</button>
-                <button type="button" name="operand" value= "8">8</button>
-                <button type="button" name="operand" value= "9">9</button>
-                <button type="button" name="operator" value= "*">x</button>
-                <button type="button" name="operand" value= "0">0</button>
-                <button type="button" name="decimal" value= ".">.</button>
-                <button type="button" name="clear" value= "clear">AC</button>
-                <button type="button" name="operator" value= "/">/</button>
-                <button type="button" name="equals" value= "=" id="equals">=</button>
+                <button type="button" class="operand" value= "1">1</button>
+                <button type="button" class="operand" value= "2">2</button>
+                <button type="button" class="operand" value= "3">3</button>
+                <button type="button" class="operator" value= "+">+</button>
+                <button type="button" class="operand" value= "4">4</button>
+                <button type="button" class="operand" value= "5">5</button>
+                <button type="button" class="operand" value= "6">6</button>
+                <button type="button" class="operator" value= "-">-</button>
+                <button type="button" class="operand" value= "7">7</button>
+                <button type="button" class="operand" value= "8">8</button>
+                <button type="button" class="operand" value= "9">9</button>
+                <button type="button" class="operator" value= "*">x</button>
+                <button type="button" class="operand" value= "0">0</button>
+                <button type="button" class="decimal" value= ".">.</button>
+                <button type="button" class="clear" value= "clear">AC</button>
+                <button type="button" class="operator" value= "/">/</button>
+                <button type="button" class="equals" value= "=" id="equals">=</button>
             </div>
         </div>
 </body>
