Add hover style to buttons

--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta class="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcutron 2000</title>
+    <title>Calcu-Tron 2000</title>
     <link rel="stylesheet" href="calc.css">
     <script src="calc.js" defer></script>
 </head>
